Fix overlay and z-index issues (#7)
* Add a better test case to match marketing site

* Add portal and render to shadow root

* Give this a try for ios support

* fix blur issue

--- a/src/address-search/styles.module.css
+++ b/src/address-search/styles.module.css
@@ -22,6 +22,16 @@
 	border: none;
 	outline: none;
 	font-family: inherit;
+	text-align: left;
+}
+
+.input.placeholder,
+.input::placeholder {
+	color: var(--grey-90);
+}
+
+button.input {
+	cursor: text;
 }
 
 .inputContainer:focus-within {
@@ -42,8 +52,16 @@
 	z-index: 1001;
 }
 
+.inputPositioner {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+}
+
 .mapPin {
 	position: absolute;
+	pointer-events: none;
 	left: 16px;
 	top: 50%;
 	transform: translateY(-50%);
@@ -84,7 +102,7 @@
 	display: none;
 }
 
-.activated .overlay {
+.overlay {
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -106,7 +124,6 @@
 	border-color: var(--grey-90);
 	outline: 2px solid var(--grey-20);
 	outline-offset: 0;
-	z-index: 1000;
 }
 
 .result {
